<?xml version="1.0"?>
<package format="2">
  <name>create_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulator for the iRobot Create platform</description>

  <maintainer email="nnaraindev@gmail.com">Natesh Narain</maintainer>
  <author email="nnaraindev@gmail.com">Natesh Narain</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>create_msgs</depend>
  <depend>create_navigation</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <exec_depend>create_description</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
