<?xml version="1.0"?>
<package format="2">
  <name>create_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulator for the iRobot Create platform</description>

  <maintainer email="nnaraindev@gmail.com">Natesh Narain</maintainer>
  <author email="nnaraindev@gmail.com">Natesh Narain</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>create_msgs</depend>
  <depend>create_navigation</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>create_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
